[package]
name = "everytask"
version = "0.1.0"
authors = ["dobefore <1432338032@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"

[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled"]