[package]
name = "task"
version = "0.1.0"
authors = ["dobefore <1432338032@qq.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
counter = "0.5.5"
clap ={version= "4.0.8",features = ["derive"]}
rusqlite= {version = "0.25.1",features = ["bundled"]}
regex = "1.6.0"


