[package]
name = "task"
version = "0.1.0"
authors = ["dobefore <1432338032@qq.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
counter = "0.5.5"
clap ={version= "4.0.8",features = ["derive"]}
regex = "1.6.0"
rusqlite= {version = "0.28.0",features = ["bundled"]}

#use cross-compiled static sqlite3 library
#[target.aarch64-unknown-linux-musl.dependencies]
#rusqlite = "0.28.0"

